--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,4 @@ pip-log.txt
 /Toolkits/NEST.5.3.0/Nest.XML
 /Toolkits/Newtonsoft.Json.9.0.1/Newtonsoft.Json.xml
 /Toolkits/RestSharp/RestSharp.xml
+/packages
