--- a/WSUI.Infrastructure/OF.Infrastructure.csproj
+++ b/WSUI.Infrastructure/OF.Infrastructure.csproj
@@ -282,6 +282,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="OFInfrastructure.snk" />
     <None Include="packages.config" />
   </ItemGroup>
