fixed sending data to ES, fixed small issues, refactored code - need to remove TurboActive, added dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@ pip-log.txt
 /Toolkits/Newtonsoft.Json.9.0.1/Newtonsoft.Json.xml
 /Toolkits/RestSharp/RestSharp.xml
 /packages
+/OutputServiceApp
