--- a/OF.ServiceApp/OF.ServiceApp.csproj
+++ b/OF.ServiceApp/OF.ServiceApp.csproj
@@ -45,7 +45,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Output\</OutputPath>
+    <OutputPath>..\OutputServiceApp\</OutputPath>
     <DefineConstants>TRACE;DEBUG;CONSOLE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
