--- a/WSUI.Infrastructure/OF.Infrastructure.csproj
+++ b/WSUI.Infrastructure/OF.Infrastructure.csproj
@@ -135,6 +135,7 @@
       <Link>Properties\Version.cs</Link>
     </Compile>
     <Compile Include="Behaviors\OFEventToComandBehavior.cs" />
+    <Compile Include="Events\OFBeforeFolderSwitchedPayload.cs" />
     <Compile Include="Events\OFKeyDownEvent.cs" />
     <Compile Include="Events\OFSelectSuggestEmailEvent.cs" />
     <Compile Include="Events\OFSuggestedEmailEvent.cs" />
